Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10553

Semi-sync replication hangs when master opens new binlog file

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.14
    • 10.1.17
    • Replication
    • None
    • Ubuntu 14.04

    Description

      Hi,

      I am having an issue with MariaDB semi-sync replication.
      Setting up replication between master and slaves works as expected but when the master begins writing to a new binlog file replication stalls on waiting for an ack from the semi-sync slave.
      I have the fallback to async set very high because I basically don't want the server to ever commit writes to the master that aren't committed to the slave.

      I have discussed this somewhat on the mailing list and have created this gist which reliably reproduces the issue: https://gist.github.com/josephglanville/c9a69b02de319ee06aef1a8d787bcce3

      It's possible this is a configuration issue rather than a bug, config for master and slave is generated in the scripts in the gist so if that is the case hopefully it's an easy fix.

      Joseph.

      Attachments

        Activity

          People

            Unassigned Unassigned
            josephglanville Joseph Glanville
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: