MDEV-10553: Semi-sync replication hangs when master opens new binlog file

In the AFTER_SYNC case, semi-sync was taking the binlog file name from
the wrong place, so around binlog rotation it could be using the new
name with a position belonging to the previous binlog file name.

Signed-off-by: Kristian Nielsen <knielsen@knielsen-hq.org>